<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="200dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="133dp"
        android:layout_height="90dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="299dp"
        android:layout_height="46dp"
        android:layout_below="@id/imageView"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:paddingLeft="20dp"
        android:textColor="#000000"
        android:textColorHint="#9E9E9E" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="299dp"
        android:layout_height="46dp"
        android:layout_below="@id/editText"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:textColor="#000000"
        android:textColorHint="#9E9E9E" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="299dp"
        android:layout_height="46dp"
        android:layout_below="@id/editText2"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="Confirm password"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:textColor="#000000"
        android:textColorHint="#9E9E9E" />

    <Button
        android:id="@+id/LoginBtn"
        android:layout_width="260dp"
        android:layout_height="46dp"
        android:layout_below="@id/editText3"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_button"
        android:text="LOGIN"
        android:textColor="#000000"
        android:textSize="18sp" />

    <Button
        android:id="@+id/SignUpBtn"
        android:layout_width="260dp"
        android:layout_height="46dp"
        android:layout_below="@id/editText3"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_button"
        android:text="SIGN UP"
        android:textColor="#000000"
        android:textSize="18sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/CreateAccount"
        android:layout_width="260dp"
        android:layout_height="46dp"
        android:layout_below="@id/LoginBtn"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_button"
        android:text="Create Account"
        android:textColor="#000000"
        android:textSize="18sp" />

</RelativeLayout>
